Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10487

QS60Style: While context menu is open, ToolButton is not drawn pressed down

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.6.3
    • 4.6.2
    • GUI: Look'n'Feel
    • None
    • a671c8442d1024e6fd842c05b35ad682a48de76d

      This is due to that style prefers asking QToolButton's down() the widget state, instead of relying on State_Sunken.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            samimeri Sami Merila (Inactive)
            samimeri Sami Merila (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes