QS60Style: When context menu is open ToolButton is not pressed down

QS60Style prefers to use widget and calls its down() API. The value
is not true unless tool button has been set down programmatically.
Thus, we should rely on State_Sunken as well.

As a fix, style asks from both the widget and checks the state before
drawing button raised/pressed.

Task-number: QTBUG-10487
Reviewed-by: Alessandro Portale